changed baseurl in config.yaml

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@
 
 title: Orecchia Research Group
 theme: orecchia
-baseurl: 'https://orecchia-research-group.github.io/orecchia-githubio/'
+baseurl: 'https://orecchia.net/'
 copyright: All Rights Reserved. Orecchia Group.
 
 ############################
