--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -113,6 +113,12 @@ avatar:
 publications:
   date_format: January 2006
   citation_style: apa
+# Link the title of the publication to the publication
+  links_title: false
+# Link the authors of the publication to the list of publication made by this author
+  links_authors: false
+
+
 projects:
   post_view: 2
   publication_view: 2
