added backend to config.yaml

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -72,7 +72,9 @@ security:
     getenv:
       - ^HUGO_
       - ^WC_
-
+backend:
+  name: github
+  repo: Orecchia-Research-Group/starter-hugo-academic
 
 
 
