added record and page for next theory lunch

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,7 +10,7 @@ main:
   - name: People
     url: people
     weight: 20
-  - name: events
+  - name: Events
     url: event
     weight: 25
   - name: Projects
