--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,21 +4,21 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
-    url: '#welcome'
-    weight: 10
+  # - name: Home
+  #   url: '#welcome'
+  #   weight: 10
   - name: People
     url: people
     weight: 20
   - name: Events
     url: event
-    weight: 25
-  - name: Projects
-    url: project
     weight: 30
   - name: Publications
     url: publication
     weight: 40
+  # - name: Projects
+  #   url: project
+  #   weight: 50
 
 
 # Link to a PDF of your resume/CV from the menu.
